# kde1-ktip

./: CMakeLists.txt  Makefile.am  README.md  ktip.desktop  ktip.kdelnk  ktip.xpm  ktipwindow.cpp  ktipwindow.h  large-ktip.xpm  mini-ktip.xpm  tips
data/: buttcoin  dhammapada  mechanicus  oblique-ed4  pcj  pcj-titles  vim-koans
